--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercice</title>
 
+    <link rel="icon" type="image/png" href="img/icone.png" />
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font_awesome/css/all.css">
 </head>
@@ -30,7 +32,7 @@
             <nav class="left_menu">
                 <ul>
                     <li>
-                        <a href="index.php">
+                        <a href="index.html">
                             <span class="icon">
                                 <i class="fas fa-home fa-1x"></i>
                             </span>
@@ -38,7 +40,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="discussion.php">
+                        <a href="discussion.html">
                             <span class="icon">
                                 <i class="far fa-comments fa-1x"></i>
                             </span>
@@ -89,7 +91,7 @@
                 </div>
 
                 <div class="right_nav">
-                    <div class="notification_nav">
+                    <!--<div class="notification_nav">
                         <ul>
                             <li><a href="">
                                     <i class="far fa-comment fa-1x"></i>
@@ -103,17 +105,102 @@
 
 
                     </div>
+                    -->
                     <div class="user_nav">
-                        <ul>
-                            <li>
-                                <img src="img/profil_pic.jpg" alt="">Aurélien Heude
+                        <ul class="user_ul">
+                            <li class="user_li">
+                                <a href="#">
+                                    <img src="img/profil_pic.jpg" alt="">
+                                    Aurélien Heude
+                                </a>
+                                <ul class="user_nav_ul_child">
+                                    <li class="user_nav_li_child">
+                                        <a href="test">Profil</a>
+                                    </li>
+                                    <li class="user_nav_li_child">
+                                        <a href="tesst">Paramètre</a>
+                                    </li>
+                                    <li class="user_nav_li_child">
+                                        <a href="tessst">Deconnexion</a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <?php include "page.php"; ?>
+            <div class="line_cards">
+                <div class="cards">
+                    <div class="header_cards">
+                        <b>Vente journalière</b>
+                    </div>
+                    <div class="article_cards">
+                        <div>
+                            <i class="fas fa-arrow-up fa-2x"></i>
+                            <b> 249.95 €</b>
+                        </div>
+                        <div style="font-size: 14px;">
+                            70%
+                        </div>
+                    </div>
+                    <div class="progress_cards">
+                        <progress class="progress" id="file" max="100" value="70"> 70% </progress>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="header_cards">
+                        <b>Ventes Mensuelle</b>
+                    </div>
+                    <div class="article_cards">
+                        <div>
+                            <i class="fas fa-arrow-up fa-2x"></i>
+                            <b> 2494.95 €</b>
+                        </div>
+                        <div style="font-size: 14px;">
+                            31%
+                        </div>
+                    </div>
+                    <div class="progress_cards">
+                        <progress class="progress" id="file" max="100" value="31"> 31% </progress>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="header_cards">
+                        <b>Ventes Annuelle</b>
+                    </div>
+                    <div class="article_cards">
+                        <div>
+                            <i class="fas fa-arrow-up fa-2x"></i>
+                            <b> 32491.95 €</b>
+                        </div>
+                        <div style="font-size: 14px;">
+                            59%
+                        </div>
+                    </div>
+                    <div class="progress_cards">
+                        <progress class="progress" id="file" max="100" value="59"> 59% </progress>
+                    </div>
+                </div>
+            </div>
+
+            <div class="line_cards_2">
+                <div class="stat_cards">
+                    a
+                </div>
+
+                <div class="event_incoming_cards">
+                    a
+                </div>
+
+            </div>
+        </div>
+
+        
+    </div>
+    <div class="chatbox">
+        <div class="header_chatbox">
+            
         </div>
     </div>
 </body>
