--- a/index.html
+++ b/index.html
@@ -5,204 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercice</title>
+    <title>H conception</title>
 
     <link rel="icon" type="image/png" href="img/icone.png" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="font_awesome/css/all.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="left">
-            <header class="header_menu">
-                <div class="header_brand">
-                    <div class="bg_icon">
-                        <i class="fas fa-euro-sign fa-1x"></i>
-                    </div>
-                    <h1>H Conception</h1>
-                </div>
-                <div class="header_button">
-                    <a href="">
-                        <i class="fas fa-align-left fa-1x"></i>
-                    </a>
-                </div>
-            </header>
-            <nav class="left_menu">
-                <ul>
-                    <li>
-                        <a href="index.html">
-                            <span class="icon">
-                                <i class="fas fa-home fa-1x"></i>
-                            </span>
-                            <span class="li_menu">Tableau de bord</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="discussion.html">
-                            <span class="icon">
-                                <i class="far fa-comments fa-1x"></i>
-                            </span>
-                            <span class="li_menu">Discussion</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="icon">
-                                <i class="far fa-calendar fa-1x"></i>
-                            </span>
-                            <span class="li_menu">Planification</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="icon">
-                                <i class="fas fa-user-friends fa-1x"></i>
-                            </span>
-                            <span class="li_menu">Employés</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="icon">
-                                <i class="fas fa-donate fa-1x"></i>
-                            </span>
-                            <span class="li_menu">Dépenses</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="icon">
-                                <i class="fas fa-file-invoice-dollar fa-1x"></i>
-                            </span>
-                            <span class="li_menu">Comptabilité</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="right">
-            <div class="nav">
-                <div class="left_nav">
-                    <input type="search" placeholder="  recherche..." id="site-search" name="q"
-                        aria-label="Search through site content">
-                    <!-- <i class="fas fa-search fa-1x"></i> -->
-                </div>
-
-                <div class="right_nav">
-                    <!--<div class="notification_nav">
-                        <ul>
-                            <li><a href="">
-                                    <i class="far fa-comment fa-1x"></i>
-                                </a>
-                            </li>
-                            <li><a href="">
-                                    <i class="far fa-clock fa-1x"></i>
-                                </a>
-                            </li>
-                        </ul>
 
 
-                    </div>
-                    -->
-                    <div class="user_nav">
-                        <ul class="user_ul">
-                            <li class="user_li">
-                                <a href="#">
-                                    <img src="img/profil_pic.jpg" alt="">
-                                    Aurélien Heude
-                                </a>
-                                <ul class="user_nav_ul_child">
-                                    <li class="user_nav_li_child">
-                                        <a href="test">Profil</a>
-                                    </li>
-                                    <li class="user_nav_li_child">
-                                        <a href="tesst">Paramètre</a>
-                                    </li>
-                                    <li class="user_nav_li_child">
-                                        <a href="tessst">Deconnexion</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
 
-            <div class="line_cards">
-                <div class="cards">
-                    <div class="header_cards">
-                        <b>Vente journalière</b>
-                    </div>
-                    <div class="article_cards">
-                        <div>
-                            <i class="fas fa-arrow-up fa-2x"></i>
-                            <b> 249.95 €</b>
-                        </div>
-                        <div style="font-size: 14px;">
-                            70%
-                        </div>
-                    </div>
-                    <div class="progress_cards">
-                        <progress class="progress" id="file" max="100" value="70"> 70% </progress>
-                    </div>
-                </div>
-                <div class="cards">
-                    <div class="header_cards">
-                        <b>Ventes Mensuelle</b>
-                    </div>
-                    <div class="article_cards">
-                        <div>
-                            <i class="fas fa-arrow-up fa-2x"></i>
-                            <b> 2494.95 €</b>
-                        </div>
-                        <div style="font-size: 14px;">
-                            31%
-                        </div>
-                    </div>
-                    <div class="progress_cards">
-                        <progress class="progress" id="file" max="100" value="31"> 31% </progress>
-                    </div>
-                </div>
-                <div class="cards">
-                    <div class="header_cards">
-                        <b>Ventes Annuelle</b>
-                    </div>
-                    <div class="article_cards">
-                        <div>
-                            <i class="fas fa-arrow-up fa-2x"></i>
-                            <b> 32491.95 €</b>
-                        </div>
-                        <div style="font-size: 14px;">
-                            59%
-                        </div>
-                    </div>
-                    <div class="progress_cards">
-                        <progress class="progress" id="file" max="100" value="59"> 59% </progress>
-                    </div>
-                </div>
-            </div>
-
-            <div class="line_cards_2">
-                <div class="stat_cards">
-                    a
-                </div>
-
-                <div class="event_incoming_cards">
-                    a
-                </div>
-
-            </div>
-        </div>
-
-        
-    </div>
-    <div class="chatbox">
-        <div class="header_chatbox">
-            
-        </div>
-    </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
