preparation du menu

--- a/index.html
+++ b/index.html
@@ -13,10 +13,27 @@
     <link rel="stylesheet" href="font_awesome/css/all.css">
 </head>
 
-<body>
+<body class="body_website">
+    <nav class="nav_website">
+        <div class="branding">
+            <h1>H CONCEPTION</h1>
+        </div>
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Prix</a></li>
+            <li><a href="#">A propos</a></li>
+            <li><a href="#">Nous contacter</a></li>
+        </ul>
+        <div class="group_button_website">
+            <a class="connect" href="views/login.html">Se connecter</a>
+            <a  class="register" href="views/register.html">S'inscrire</a>
+        </div>
+    </nav>
 
 
-
+    <div class="up_button">
+        <i class="fas fa-arrow-up fa-1x"></i>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
